# kobako-mruby-sys тАФ mruby C API FFI surface for the kobako Guest Binary.
#
# Two responsibilities:
#
#   1. `bindgen`-generated FFI declarations for the mruby C API surface
#      the Guest Binary calls (the `mrb_open` / `mrb_load_nstring` /
#      `mrb_define_class_under` / тАж family plus the `mrb_value` and
#      `mrb_state` ABI types). The bindings are produced at build time
#      from `src/wrapper.h` against `vendor/mruby/include/`.
#   2. Layout-safe C shims (`bytecode.c`, `io.c`, `value.c`) that
#      wrap the macro-only mruby APIs not covered by bindgen's
#      static-fn trampolines. `bytecode.c` parses + classifies IREP
#      blobs; `io.c` carries the `mrb_obj_as_string` + `fwrite` loop
#      for `$stdout` / `$stderr` writes; `value.c` keeps a single
#      float-unbox shim that sidesteps a `union mrb_value_` return
#      ABI mismatch under `MRB_WORDBOX_NO_INLINE_FLOAT`.
#
# Build-time inputs (consumed via env, populated by `tasks/wasm.rake`):
#
#   * `MRUBY_LIB_DIR` тАФ absolute path to the directory containing the
#     pre-built `libmruby.a` (Stage B output). Drives `cargo:rustc-link-*`.
#   * `WASI_SDK_PATH` тАФ absolute path to the unpacked wasi-sdk. Drives
#     both the bindgen clang invocation (`--sysroot`, `--target`) and
#     the setjmp library link directive (required for mruby's
#     WebAssembly exception handling).
#
# What this crate is NOT
# ----------------------
#   * Not a magnus-style typed value wrapper. The safe `Mrb` / `Ccontext`
#     / `mrb_value` ergonomics live in the safe-layer modules in this
#     same crate (`src/{state,value,class,ccontext}.rs`); the bindgen
#     output stays a pure FFI surface beneath them.

[package]
name = "kobako-mruby-sys"
version = "0.0.0"
edition = "2021"
publish = false
description = "bindgen-driven mruby C API FFI bindings + layout-safe C shims for the kobako Guest Binary."
license = "Apache-2.0"

[lib]
# `rlib` only тАФ this crate produces no standalone artefact. It is
# consumed as a path dependency by `kobako-wasm`, whose cdylib carries
# the eventual symbol surface into `kobako.wasm`.
crate-type = ["rlib"]

[build-dependencies]
# `cc` compiles the remaining mruby header-driven C shims plus the
# bindgen-emitted static-fn trampolines. The shims include `<mruby.h>`
# and friends, so the build only runs when the wasi-sdk toolchain is
# staged (see `build.rs`).
cc = "1"
# `bindgen` generates the mruby C API FFI surface from `src/wrapper.h`.
# Pinned to the major that `rb_sys` already drags into the host workspace
# so a future cargo unification keeps a single bindgen entry.
bindgen = "0.72"
