# kobako-regexp — sandbox Regexp / MatchData capability gem.
#
# Backs guest `Regexp` and `MatchData` with the pure-Rust `fancy-regex`
# engine, defined entirely through the `beni` typed wrapper — no mrblib,
# no C mrbgem. A Guest Binary shell composes it as an optional capability
# gem the same way it composes `kobako-io`. The
# Ruby-visible surface tracks the curated regexp engine's coverage, not
# the full CRuby API; match offsets are byte-based.

[package]
name = "kobako-regexp"
version = "0.8.0"
edition = "2021"
description = "Sandbox Regexp / MatchData capability gem for kobako mruby guests — pure-Rust fancy-regex over beni."
license = "Apache-2.0"
repository = "https://github.com/elct9620/kobako"
readme = "README.md"
keywords = ["wasm", "mruby", "sandbox", "regexp"]
categories = ["wasm"]

[dependencies]
# Typed mruby wrapper — the `Gem` trait this crate implements plus the
# CDATA / class-definition seams the Regexp and MatchData surfaces use.
beni = "0.8.0"

# Pure-Rust regexp engine — the `regex` crate plus the backtracking
# layer (backreferences, look-around) Ruby patterns reach for. `std`
# only by default; `unicode` is opt-in.
fancy-regex = { version = "0.18", default-features = false, features = ["std"] }

# Bounded LRU for the per-invocation compiled-pattern cache (docs/regexp.md
# RX-08). Its default hashbrown backend keeps the hot-path lookup fast; the
# cache exists for speed, so the small size cost over std HashMap is worth it.
lru = "0.18"

[features]
# Unicode property classes (`\p{...}`) and case-insensitive matching.
# fancy-regex's `unicode` feature is coarse: with it OFF the engine rejects
# every `(?i)` pattern — even ASCII — so a guest that uses `/i` needs it ON.
# ASCII `\d` / `\w` / `\s` are rewritten to explicit classes either way. The
# kobako-wasm shell enables it so `/i` patterns work on the bundled guest.
unicode = ["fancy-regex/unicode"]
