# kobako-wasm — Guest Binary crate.
#
# This crate compiles to `kobako.wasm` (the Guest Binary artifact) and
# houses the ABI entry bodies plus the Kobako domain runtime. The
# mruby-free wire tiers (`codec`, `transport`, `outcome`) live in the
# sibling `kobako-core` contract crate; the IO / Kernel capability gem
# lives in the sibling `kobako-io` crate; the typed mruby wrapper and
# its FFI layer come from the published `beni` / `beni-sys` crates.
#
# This crate is a member of the `wasm/` sub-workspace (see
# `wasm/Cargo.toml`). The repo-root `Cargo.toml` excludes the entire
# `wasm/` subtree so the wasmtime-bearing host workspace does not pull
# the wasm32-wasip1 crates into its dependency graph.

[package]
name = "kobako-wasm"
version = "0.0.0"
edition = "2021"
publish = false
description = "kobako Guest Binary — the mruby-on-wasm guest assembled over the kobako-core contract crate."
license = "Apache-2.0"

[lib]
# `cdylib` produces the wasm artifact when targeting wasm32-wasip1.
# `rlib` lets us run the entry-body unit tests on the host target.
crate-type = ["cdylib", "rlib"]

[dependencies]
# `kobako-core` — Guest ABI contract crate (sibling workspace member).
# Supplies the mruby-free wire tiers (`codec`, `outcome`); this crate
# layers the mruby implementation on top.
kobako-core = { path = "../kobako-core" }

# `kobako-io` — sandbox IO / Kernel capability gem (sibling workspace
# member). Composed into the bundled guest by `Kobako::install`.
kobako-io = { path = "../kobako-io" }

# `beni` — typed Rust wrapper crate over the mruby C API (extracted
# from this repository). Re-exports the underlying `beni-sys` FFI
# through its `sys` namespace, so `crate::mruby::sys::*` resolves to
# the raw bindgen surface and typed entry points (`Mrb`, `Ccontext`,
# `Value`, `RClass`, the `format::*` ZST markers, `IntoValue` /
# `FromValue` / `Format` / `Module` / `Object` traits, …) come
# through `beni::*` directly. `beni-sys` reaches the dependency graph
# transitively; archive discovery reads `MRUBY_LIB_DIR` +
# `WASI_SDK_PATH` (exported by `rake wasm:build`).
beni = "0.1.0"

# `[profile.release]` lives at the workspace root (`wasm/Cargo.toml`)
# so all members share the same wasm size hygiene tuning.
