# kobako-wasm — Guest Binary crate.
#
# This crate compiles to `kobako.wasm` (the Guest Binary artifact) —
# the leaf shell composing the sibling `kobako-mruby` crate (the
# MrbGuest harness + KobakoBridge built-in) with the sibling `kobako-io` gem
# over the `kobako-core` contract crate, whose `export_guest!` macro
# emits the wasm exports here. The typed mruby wrapper and its FFI
# layer come from the published `beni` / `beni-sys` crates.
#
# This crate is a member of the `wasm/` sub-workspace (see
# `wasm/Cargo.toml`). The repo-root `Cargo.toml` excludes the entire
# `wasm/` subtree so the wasmtime-bearing host workspace does not pull
# the wasm32-wasip1 crates into its dependency graph.

[package]
name = "kobako-wasm"
version = "0.0.0"
edition = "2021"
publish = false
description = "kobako Guest Binary — the mruby-on-wasm guest assembled over the kobako-core contract crate."
license = "Apache-2.0"

[lib]
# `cdylib` produces the wasm artifact when targeting wasm32-wasip1;
# the shell is deliberately cdylib-only (no rlib) so no crate can
# depend on the exporting leaf — duplicate `#[no_mangle]` symbols stay
# structurally impossible.
crate-type = ["cdylib"]

[dependencies]
# `kobako-codec` — portable wire tier (cross-workspace path
# dependency). Direct dependency of the oracle bins, which exercise the
# codec and envelope layers against the Ruby host's independent
# implementation.
kobako-codec = { path = "../../crates/kobako-codec" }

# `kobako-core` — Guest ABI contract crate (sibling workspace member).
# Direct dependency because `export_guest!` resolves against it.
kobako-core = { path = "../kobako-core" }

# `kobako-mruby` — the assembled mruby implementation (sibling
# workspace member): the `MrbGuest` harness this shell implements.
kobako-mruby = { path = "../kobako-mruby" }

# `kobako-io` — sandbox IO / Kernel capability gem (sibling workspace
# member), wired by `KobakoGuest::init_gems`.
kobako-io = { path = "../kobako-io" }

# `kobako-regexp` — Regexp / MatchData capability gem. Optional: the
# default Guest Binary ships without it (pure mruby + `kobako-io`); the
# `regexp` / `regexp-unicode` features below compose it into the named
# variant binaries instead.
kobako-regexp = { path = "../kobako-regexp", optional = true }

# `kobako-json` — JSON parse / generate capability gem. Optional, like
# `kobako-regexp`: the `json` / `full` features below compose it into the
# named variant binaries; the default Guest Binary ships without it.
kobako-json = { path = "../kobako-json", optional = true }

# `beni` — typed mruby wrapper; the shell only names `Mrb` / `Error`
# in its `init_gems` hook. Archive discovery happens in `beni-sys`
# via `MRUBY_LIB_DIR` + `WASI_SDK_PATH` (exported by
# `rake wasm:build`).
beni = "0.8.0"

# Guest Binary variants. The default (no feature) is the pure binary;
# `regexp` adds the kobako-regexp capability gem, and `regexp-unicode`
# also turns on its coarse Unicode support (`\p{...}` classes and the
# case folding `/i` patterns need). `json` adds the kobako-json capability
# gem, and `full` composes ASCII regexp with json. `rake wasm:build:regexp`
# / `wasm:build:regexp_unicode` / `wasm:build:json` / `wasm:build:full`
# select these.
[features]
regexp = ["dep:kobako-regexp"]
regexp-unicode = ["regexp", "kobako-regexp/unicode"]
json = ["dep:kobako-json"]
full = ["regexp", "json"]

# `[profile.release]` lives at the workspace root (`wasm/Cargo.toml`)
# so all members share the same wasm size hygiene tuning.
