# kobako — the assembled mruby implementation of the Guest ABI.
#
# The `MrbGuest` trait harness (required `init_gems` hook +
# provided `eval` / `run` / `yield_to_block` flows over mruby), the
# wire-tied `KobakoBridge` built-in gem (Namespace / Handle dispatch,
# block/yield machinery), and the mruby ↔ wire codec conversion. A
# guest shell implements `MrbGuest`, forwards `kobako_core::Guest` to
# it, and emits the exports with `kobako_core::export_guest!` — the
# in-repo `kobako-wasm` shell is the worked example.

[package]
name = "kobako"
version = "0.3.0"
edition = "2021"
description = "Assembled mruby implementation of the kobako Guest ABI — the MrbGuest harness and the KobakoBridge gem, built on beni."
license = "Apache-2.0"
repository = "https://github.com/elct9620/kobako"
readme = "README.md"
keywords = ["wasm", "mruby", "sandbox", "wasi"]
categories = ["wasm"]

[dependencies]
# Guest ABI contract crate — the wire tiers (`codec`, `transport`,
# `outcome`) and ABI primitives the provided flows implement the
# contract with.
kobako-core = { path = "../kobako-core", version = "0.3.0" }

# Typed mruby wrapper — `Mrb` / `Value` seams, the `Gem` trait, and
# the `beni::sys` re-export the yield machinery's raw shims go
# through.
beni = "0.4.0"

# Direct dependency on the FFI layer so cargo forwards its
# `links = "mruby"` metadata (`DEP_MRUBY_LINKED`) to this crate's
# build script — see build.rs. Code never names this path; call
# sites go through the `beni::sys` re-export.
beni-sys = "0.4.0"
