# mruby — typed Rust wrapper crate over the `mruby-sys` FFI surface.
#
# Mirrors the magnus / rb-sys split applied at the mruby boundary:
# `mruby-sys` owns the bindgen-generated `extern "C"` surface and the
# layout-safe C shims; this crate owns every Rust-level abstraction
# above it (the `Mrb` / `Ccontext` RAII types, the `Value` / `Class` /
# `Array` / `Hash` newtypes, the `IntoValue` / `FromValue` trait seam,
# the `Format`-based `mrb_get_args` dispatch, and the `protect`
# closure wrapper). Consumers `use mruby::Mrb` for typed access and
# fall through to `mruby::sys::mrb_*` only at the raw-FFI escape
# hatch.
#
# This commit only scaffolds the crate as a transparent proxy over
# `mruby-sys` — every name reachable from `mruby-sys` is re-exported
# here unchanged, and the underlying physical move of the typed
# wrappers from `mruby-sys/src/` to `mruby/src/` is a follow-up. The
# scaffolding shape lets the consumer (`kobako-wasm`) switch its
# `use mruby_sys::*` imports to `use mruby::*` in a separate commit
# without any behavior change in between.

[package]
name = "mruby"
version = "0.0.0"
edition = "2021"
publish = false
description = "Typed Rust wrapper over the mruby C API, sitting on the `mruby-sys` bindgen surface."
license = "Apache-2.0"

[lib]
# `rlib` only — this crate is consumed as a path dependency by
# `kobako-wasm`. It re-exports the entire `mruby-sys` surface, so the
# final symbol set in `kobako.wasm` is unchanged.
crate-type = ["rlib"]

[dependencies]
# `mruby-sys` — sibling crate carrying the bindgen-generated FFI
# surface plus the layout-safe C shims. Re-exported through `sys` for
# raw-FFI escape hatch access (`mruby::sys::mrb_*`).
mruby-sys = { path = "../mruby-sys" }
