# test-guest — minimal wasm fixture used by the host-side Sandbox#run E2E
# tests in Ruby.
#
# This crate is NOT shipped in the gem and is NOT part of the production
# Guest Binary (`kobako.wasm`). It exists so that the host-side run path
# can be exercised end-to-end against a real wasm module without
# depending on the heavy mruby toolchain build (`KOBAKO_E2E_BUILD=1`).
#
# Behavioural contract — matches SPEC ABI Signatures exactly:
#
#   - exports `__kobako_alloc(size: u32) -> u32` — bump allocator
#   - exports `__kobako_run() -> ()` — reads WASI stdin two-frame protocol
#     (Frame 1: preamble msgpack, consumed and discarded; Frame 2: user
#     script UTF-8). Parses Frame 2 as a decimal integer (or special
#     keywords), builds an Outcome envelope, stores it in OUTCOME_BUFFER.
#   - exports `__kobako_take_outcome() -> u64` — returns packed (ptr, len)
#     of the Outcome bytes.
#   - imports `env::__kobako_rpc_call(req_ptr, req_len) -> u64` — declared
#     so the import-table satisfies the host linker; invoked from the `rpc:`
#     source branch to exercise host-side RPC dispatch.
#
# Re-uses the production `kobako-wasm` crate's envelope encoder so the
# fixture and the real guest agree on the wire format.

[workspace]

[package]
name = "test-guest"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
kobako-wasm = { path = "../kobako-wasm", default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
